feat(vault-binary-type): implement backend for create and upload vault item with type binary
