# internal/server/repository/repository.go
@@ -21,6 +21,7 @@ type UserRepo interface {
 
 type VaultRepo interface {
 	GetAllItems(ctx context.Context, userID int) ([]models.VaultItem, error)
+	UpdateBinaryURL(ctx context.Context, req models.VaultConfirmBinaryUploadReq) error
 	CreateItem(ctx context.Context, item models.VaultItem) (models.VaultItem, error)
 }
 
